--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-color: #2DC0CA;
+            background-color: lightblue;
             font-family: 'Montserrat', sans-serif;
             color: #fff;
             margin: 0;
@@ -74,7 +74,7 @@
         }
 
         .scripts-container:hover {
-            transform: scale(1.05); /* Add a slight zoom effect on hover */
+            transform: scale(1.03); /* Add a slight zoom effect on hover */
         }
 
         .script-item {
@@ -97,7 +97,7 @@
         .script-header {
             font-size: 1.2em;
             margin-bottom: 5px;
-            color: #28a745;
+            color: #ffffff;
             text-transform: uppercase;
             font-weight: 600;
             letter-spacing: 1.2px;
@@ -105,7 +105,7 @@
         }
 
         .subheader {
-            color: red;
+            color: lightblue;
             font-size: 1em;
             margin-top: 10px;
             animation: fadeIn 1s ease-in-out;
@@ -183,7 +183,7 @@
 
         .script-item.new-style {
             background: rgba(10, 10, 10, 0.8); 
-            border: 2px solid #ff6347;
+            border: 2px solid lightblue;
             box-shadow: 0 15px 40px rgba(0, 0, 0, 0.5);
             transition: all 0.3s ease;
         }
@@ -205,20 +205,20 @@
         }
 
         .copy-button.new-style {
-            background: #ff6347;
+            background: #000000;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
 
         .copy-button.new-style:hover {
-            background: #e53e3e;
+            background: #1f1f1f;
         }
 
         .join-game-button.new-style {
-            background: #1e40af;
+            background: #086100;
         }
 
         .join-game-button.new-style:hover {
-            background: #1d4ed8;
+            background: #0e8a03;
         }
     </style>
 </head>
