--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <div class="script-header">Pro Clicker Simulator</div>
                 <div class="subheader">An admin panel with OP features!</div>
                 <div class="script-code">
-                    game:GetService("Players").LocalPlayer.PlayerGui.AdminGui.Panel.Visible = true
+                    loadstring(game:HttpGet("https://getorbs.us.to/pro-clicker-simulator-admin-panel.lua"))()
                 </div>
                 <div class="button-container">
                     <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
