--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <div class="container">
         <input type="text" class="search-bar" placeholder="Search game name..." onkeyup="searchScripts()">
 
-        <p>Look at my scripts, they're kind of useless but use it if you want.</p>
+        <p>Welcome, here you can find scripts mostly made by Orbs. There are absolutely no ads, no malicious scripts, or keys. Thanks for using the website!</p>
 
         <div class="scripts-container">
             <div class="script-item new-style">
@@ -244,14 +244,13 @@
             
             <!-- Another script item, with different content -->
             <div class="script-item new-style">
-                <div class="script-header">a</div>
-                <div class="subheader">A new script with different code!</div>
+                <div class="script-header">UNIVERSAL: MOBILE DEX</div>
+                <div class="subheader">Let's you look into the games' files, great for finding vulnerabilities!</div>
                 <div class="script-code">
-                    print("e")
+                    loadstring(game:HttpGet("https://getorbs.us.to/mobile-dex.lua"))()
                 </div>
                 <div class="button-container">
                     <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
-                    <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/123456789/Another-Game')">Game link</button>
                 </div>
             </div>
             
