--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
             
             
             <div class="script-item new-style">
-    <div class="script-header">b</div>
-    <div class="subheader">A brief description of what this script does.</div>
-    <div class="script-code">print("b")
+    <div class="script-header">THE CASTLE👁️ [FANMADE]</div>
+    <div class="subheader">Infinite rebirths and a Revive GUI in game!</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/df3-2-obfuscated.lua"))()
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
@@ -269,8 +269,7 @@
 <div class="script-item new-style">
     <div class="script-header">c</div>
     <div class="subheader">A brief description of what this script does.</div>
-    <div class="script-code">
-        print("c")
+    <div class="script-code">print("c")
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
