--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             
             <div class="script-item new-style">
     <div class="script-header">THE CASTLE👁️ [FANMADE]</div>
-    <div class="subheader">Infinite rebirths and a Revive GUI in game!</div>
+    <div class="subheader">Infinite rebirths and a Revive GUI in game! All credits to brozil on scriptblox.</div>
     <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/df3-2-obfuscated.lua"))()
     </div>
     <div class="button-container">
