--- a/index.html
+++ b/index.html
@@ -261,20 +261,20 @@
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
         <!-- Optional: Add a button to join the game -->
-        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/123456789/My-New-Game')">Game link</button>
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/17883142987/THE-CASTLE-FANMADE')">Game link</button>
     </div>
 </div>
 
 
 <div class="script-item new-style">
-    <div class="script-header">c</div>
-    <div class="subheader">A brief description of what this script does.</div>
-    <div class="script-code">print("c")
+    <div class="script-header">Climb and Get $R 🤑 (Free VIP 💎) 1,000 Stairs</div>
+    <div class="subheader">Loopkills everyone, will eventually make everyone just have a torso...(UNOBFUSCATED SCRIPT)</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/cagr1000stairs-unobfuscated.lua"))()
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
         <!-- Optional: Add a button to join the game -->
-        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/123456789/My-New-Game')">Game link</button>
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/17351965223/Climb-and-Get-R-Free-VIP-1-000-Stairs')">Game link</button>
     </div>
 </div>
 
@@ -282,8 +282,7 @@
 <div class="script-item new-style">
     <div class="script-header">d</div>
     <div class="subheader">A brief description of what this script does.</div>
-    <div class="script-code">
-        print("d")
+    <div class="script-code">print("d")
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
