--- a/index.html
+++ b/index.html
@@ -280,14 +280,14 @@
 
 
 <div class="script-item new-style">
-    <div class="script-header">d</div>
-    <div class="subheader">A brief description of what this script does.</div>
-    <div class="script-code">print("d")
+    <div class="script-header">Bloxcity RP</div>
+    <div class="subheader">Just infinite money. (UNOBFUSCATED SCRIPT)</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/brp-unobfuscated.lua"))()
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
         <!-- Optional: Add a button to join the game -->
-        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/123456789/My-New-Game')">Game link</button>
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/14621554335/Bloxcity-RP')">Game link</button>
     </div>
 </div>
 
@@ -295,8 +295,7 @@
 <div class="script-item new-style">
     <div class="script-header">e</div>
     <div class="subheader">A brief description of what this script does.</div>
-    <div class="script-code">
-        print("e")
+    <div class="script-code">print("e")
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
