--- a/index.html
+++ b/index.html
@@ -293,14 +293,14 @@
 
 
 <div class="script-item new-style">
-    <div class="script-header">e</div>
-    <div class="subheader">A brief description of what this script does.</div>
-    <div class="script-code">print("e")
+    <div class="script-header">RNG Cart Ride Adventure</div>
+    <div class="subheader">OP, infinite gems!</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/rngcra-obfuscated.lua"))()
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
         <!-- Optional: Add a button to join the game -->
-        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/123456789/My-New-Game')">Game link</button>
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/18993029136/RNG-Cart-Ride-Adventure')">Game link</button>
     </div>
 </div>
 
@@ -308,8 +308,7 @@
 <div class="script-item new-style">
     <div class="script-header">f</div>
     <div class="subheader">A brief description of what this script does.</div>
-    <div class="script-code">
-        print("f")
+    <div class="script-code">print("f")
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
