--- a/index.html
+++ b/index.html
@@ -330,6 +330,32 @@
     </div>
 </div>
 
+            
+<div class="script-item new-style">
+    <div class="script-header">h</div>
+    <div class="subheader">A brief description of what this script does.</div>
+    <div class="script-code">print("h")
+    </div>
+    <div class="button-container">
+        <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
+        <!-- Optional: Add a button to join the game -->
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/123456789/My-New-Game')">Game link</button>
+    </div>
+</div>
+
+
+<div class="script-item new-style">
+    <div class="script-header">i</div>
+    <div class="subheader">A brief description of what this script does.</div>
+    <div class="script-code">print("i")
+    </div>
+    <div class="button-container">
+        <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
+        <!-- Optional: Add a button to join the game -->
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/123456789/My-New-Game')">Game link</button>
+    </div>
+</div>
+
 
         </div>
         
