--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
 
 <div class="script-item new-style">
-    <div class="script-header">RNG Cart Ride Adventure</div>
+    <div class="script-header">Patched: RNG Cart Ride Adventure</div>
     <div class="subheader">OP, infinite gems!</div>
     <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/rngcra-obfuscated.lua"))()
     </div>
