--- a/index.html
+++ b/index.html
@@ -370,6 +370,20 @@
 </div>
 
 
+<div class="script-item new-style">
+    <div class="script-header">k</div>
+    <div class="subheader">k</div>
+    <div class="script-code">print("k")
+    </div>
+    <div class="button-container">
+        <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
+        <!-- Optional: Add a button to join the game -->
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/18169009346/doctors-office')">Game link</button>
+    </div>
+</div>
+
+
+
 
         </div>
         
