--- a/index.html
+++ b/index.html
@@ -358,14 +358,14 @@
 
 
 <div class="script-item new-style">
-    <div class="script-header">j</div>
-    <div class="subheader">j</div>
-    <div class="script-code">print("j")
+    <div class="script-header">Escape The Lava🔥</div>
+    <div class="subheader">OP, a GUI with 12 features!</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/ETL-obfuscated.lua"))()
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
         <!-- Optional: Add a button to join the game -->
-        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/18169009346/doctors-office')">Game link</button>
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/98280977550908/Escape-The-Lava')">Game link</button>
     </div>
 </div>
 
@@ -381,6 +381,34 @@
         <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/18169009346/doctors-office')">Game link</button>
     </div>
 </div>
+
+
+<div class="script-item new-style">
+    <div class="script-header">l</div>
+    <div class="subheader">l</div>
+    <div class="script-code">print("l")
+    </div>
+    <div class="button-container">
+        <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
+        <!-- Optional: Add a button to join the game -->
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/18169009346/doctors-office')">Game link</button>
+    </div>
+</div>
+
+
+
+<div class="script-item new-style">
+    <div class="script-header">m</div>
+    <div class="subheader">m</div>
+    <div class="script-code">print("m")
+    </div>
+    <div class="button-container">
+        <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
+        <!-- Optional: Add a button to join the game -->
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/18169009346/doctors-office')">Game link</button>
+    </div>
+</div>
+
 
 
 
