--- a/index.html
+++ b/index.html
@@ -371,14 +371,14 @@
 
 
 <div class="script-item new-style">
-    <div class="script-header">k</div>
-    <div class="subheader">k</div>
-    <div class="script-code">print("k")
+    <div class="script-header">Guess The Doors But Bad Kawaii Entities Items Achi</div>
+    <div class="subheader">Get answers, and Complete aura (MUST BE NEAR ONE)</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/GTDBBKEIA-obfuscated.lua"))()
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
         <!-- Optional: Add a button to join the game -->
-        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/18169009346/doctors-office')">Game link</button>
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/12467329018/Guess-The-Doors-But-Bad-Kawaii-Entities-Items-Achi')">Game link</button>
     </div>
 </div>
 
