--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@
 
 
 <div class="script-item new-style">
-    <div class="script-header">l</div>
-    <div class="subheader">l</div>
-    <div class="script-code">print("l")
+    <div class="script-header">Good or Evil</div>
+    <div class="subheader">Get money, and always chooser.</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/GOE-obfuscated.lua"))()
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
