--- a/index.html
+++ b/index.html
@@ -442,7 +442,8 @@
         </div>
         
         <footer>
-            <p>&copy; Scripts made by orbs - Modified source code of @ExploitFin's unfinished script website (ty)</p>
+            <p>&copy; 
+                Scripts made by orbs - Modified source code of @ExploitFin's unfinished script website (ty)</p>
         </footer>
     </div>
 
