--- a/index.html
+++ b/index.html
@@ -411,14 +411,14 @@
 
 
 <div class="script-item new-style">
-    <div class="script-header">r</div>
-    <div class="subheader">r</div>
-    <div class="script-code">r
+    <div class="script-header">Realistic Ragdoll Physics</div>
+    <div class="subheader">Dev panel?</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/RRP-unobfuscated.lua"))()
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
         <!-- Optional: Add a button to join the game -->
-        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/16841760655/Acid-Escape')">Game link</button>
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/6305582775/Realistic-Ragdoll-Physics')">Game link</button>
     </div>
 </div>
 
