--- a/index.html
+++ b/index.html
@@ -437,14 +437,14 @@
 
 
 <div class="script-item new-style">
-    <div class="script-header">a</div>
-    <div class="subheader">a</div>
-    <div class="script-code">a
+    <div class="script-header">NEW Don't Press The Button Furious Jumper (BETA)</div>
+    <div class="subheader">Rain coins, and lag the server! (SERVERSIDED)</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/DPTBFJ-obfuscated.lua"))()
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
         <!-- Optional: Add a button to join the game -->
-        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/130491334574811/Free-Donation-Spinner')">Game link</button>
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/9075479275/NEW-Dont-Press-The-Button-Furious-Jumper-BETA')">Game link</button>
     </div>
 </div>
 
