--- a/index.html
+++ b/index.html
@@ -476,6 +476,19 @@
 
 
 <div class="script-item new-style">
+    <div class="script-header">Cold Donations 🥶</div>
+    <div class="subheader">Free gamepass items!</div>
+    <div class="script-code">loadstring(game:HttpGet("https://getorbs.us.to/CD-obfuscated.lua"))()
+    </div>
+    <div class="button-container">
+        <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
+        <!-- Optional: Add a button to join the game -->
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/75189617133257/Cold-Donations')">Game link</button>
+    </div>
+</div>
+
+
+div class="script-item new-style">
     <div class="script-header">a</div>
     <div class="subheader">a</div>
     <div class="script-code">a
@@ -483,9 +496,23 @@
     <div class="button-container">
         <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
         <!-- Optional: Add a button to join the game -->
-        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/130491334574811/Free-Donation-Spinner')">Game link</button>
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/75189617133257/Cold-Donations')">Game link</button>
     </div>
 </div>
+
+
+div class="script-item new-style">
+    <div class="script-header">a</div>
+    <div class="subheader">a</div>
+    <div class="script-code">a
+    </div>
+    <div class="button-container">
+        <button class="copy-button new-style" onclick="copyToClipboard(this)">Copy</button>
+        <!-- Optional: Add a button to join the game -->
+        <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/75189617133257/Cold-Donations')">Game link</button>
+    </div>
+</div>
+
 
 
 
