--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 </div>
 
 
-div class="script-item new-style">
+<div class="script-item new-style">
     <div class="script-header">a</div>
     <div class="subheader">a</div>
     <div class="script-code">a
@@ -501,7 +501,7 @@ div class="script-item new-style">
 </div>
 
 
-div class="script-item new-style">
+<div class="script-item new-style">
     <div class="script-header">a</div>
     <div class="subheader">a</div>
     <div class="script-code">a
@@ -512,10 +512,6 @@ div class="script-item new-style">
         <button class="join-game-button new-style" onclick="joinGame('https://www.roblox.com/games/75189617133257/Cold-Donations')">Game link</button>
     </div>
 </div>
-
-
-
-
 
 
         </div>
